# fairsharing-cli

./: .gitignore  LICENSE  README.md  fairsharing-cli-0.1.0.r5.g74f1285-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: release.yml
src/fairsharing_cli/: __init__.py  cli.py  client.py  config.py  core.py  docs.py
tests/: test_cli.py  test_client.py  test_config.py  test_core.py  test_higher_order.py
